[package]
name = "hooker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "winbase", "winnt", "synchapi", "handleapi", "errhandlingapi", "memoryapi", "libloaderapi", "wow64apiset", "psapi", "winuser"] }
log = "0.4.19"
simplelog = "0.12.1"
time = "0.3.23"